--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>抽奖 WebApp (占位素材版)</title>
+  <title>炫酷抽奖 WebApp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -10,30 +10,30 @@
 <body>
   <!-- 启动界面 -->
   <div id="start-screen" class="screen">
-    <h2>抽奖启动</h2>
+    <div class="panel">
+      <label>选择中奖人数：</label>
+      <select id="winner-count">
+        <option>1</option>
+        <option>5</option>
+        <option>10</option>
+        <option>15</option>
+        <option>20</option>
+        <option>50</option>
+      </select>
 
-    <label>选择中奖人数：</label>
-    <select id="winner-count">
-      <option>1</option>
-      <option>5</option>
-      <option>10</option>
-      <option>15</option>
-      <option>20</option>
-      <option>50</option>
-    </select>
+      <label>动画速度：</label>
+      <select id="speed-select">
+        <option value="1">1x</option>
+        <option value="2">2x</option>
+        <option value="5">5x</option>
+        <option value="10">10x</option>
+      </select>
 
-    <label>动画速度：</label>
-    <select id="speed-select">
-      <option value="1">1x</option>
-      <option value="2">2x</option>
-      <option value="5">5x</option>
-      <option value="10">10x</option>
-    </select>
+      <label>参赛 ID（每行一个）：</label>
+      <textarea id="participants" rows="6"></textarea>
 
-    <label>参赛 ID（每行一个）：</label>
-    <textarea id="participants" rows="6"></textarea>
-
-    <button id="start-btn" class="img-btn start-btn"></button>
+      <button id="start-btn" class="img-btn start-btn"></button>
+    </div>
   </div>
 
   <!-- 抽奖界面 -->
@@ -51,12 +51,12 @@
     </div>
 
     <div class="buttons">
-      <button id="speed-1" class="img-btn"></button>
-      <button id="speed-2" class="img-btn"></button>
-      <button id="speed-5" class="img-btn"></button>
-      <button id="speed-10" class="img-btn"></button>
-      <button id="copy-btn" class="img-btn"></button>
-      <button id="back-btn" class="img-btn"></button>
+      <button id="speed-1" class="img-btn speed-btn s1"></button>
+      <button id="speed-2" class="img-btn speed-btn s2"></button>
+      <button id="speed-5" class="img-btn speed-btn s5"></button>
+      <button id="speed-10" class="img-btn speed-btn s10"></button>
+      <button id="copy-btn" class="img-btn copy-btn"></button>
+      <button id="back-btn" class="img-btn back-btn"></button>
     </div>
 
     <canvas id="confetti"></canvas>
