--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <ul id="winners-ul"></ul>
     </div>
 
-    <!-- 操作按钮区 -->
+    <!-- 操作按钮 -->
     <div class="buttons">
       <button id="copy-btn" class="img-btn copy-btn"></button>
       <button id="back-btn" class="img-btn back-btn"></button>
@@ -63,11 +63,10 @@
       <button id="speed-10" class="img-btn speed-btn s10"></button>
     </div>
 
-    <!-- 粒子特效画布 -->
+    <!-- 粒子特效 -->
     <canvas id="confetti"></canvas>
   </div>
 
-  <!-- ========== 脚本 ========== -->
   <script src="app.js"></script>
 </body>
 </html>
