--- a/index.html
+++ b/index.html
@@ -7,51 +7,48 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 设置表单 -->
-  <div class="settings">
-    <h2>抽奖设置</h2>
-    <textarea id="idsInput" placeholder="输入候选ID，每行一个"></textarea>
-    <input type="number" id="winnersCount" placeholder="中奖人数" value="1" min="1">
-    <input type="text" id="bannerText" placeholder="Banner文字 (例如：XXX直播间)">
-    <select id="fontStyle">
-      <option value="glow">发光</option>
-      <option value="emboss">浮雕</option>
-      <option value="shadow">描边阴影</option>
-    </select>
-    <button id="prepareBtn">提交设置</button>
+  <!-- 开始页面 -->
+  <div id="startPage" class="page start-page" style="background-image:url('img/bg_start.jpg')">
+    <div class="start-container">
+      <textarea id="idsInput" placeholder="输入候选ID，每行一个"></textarea>
+      <input type="number" id="winnersCount" placeholder="中奖人数" min="1">
+      <img id="goDrawBtn" src="img/bg_start.png" class="start-btn" alt="开始抽奖">
+    </div>
   </div>
 
-  <!-- 抽奖区 -->
-  <div class="lottery">
-    <h1 id="banner" class="banner">抽奖机</h1>
+  <!-- 抽奖页面 -->
+  <div id="drawPage" class="page draw-page hidden" style="background-image:url('img/bg_draw.jpg')">
+    <div class="lottery">
+      <!-- 老虎机 -->
+      <div class="slot-frame">
+        <img src="img/slot_frame.png" class="frame" alt="slot frame">
+        <div class="slot-window">
+          <span id="rollingId">---</span>
+        </div>
+      </div>
 
-    <div class="slot-frame">
-      <img src="img/slot_frame.png" class="frame" alt="slot frame">
-      <div class="slot-window">
-        <span id="rollingId">---</span>
+      <!-- 按钮区 -->
+      <div class="buttons">
+        <img id="startBtn" src="img/start_btn.png" class="btn" alt="开始">
+        <img id="copyBtn" src="img/copy_btn.png" class="btn" alt="复制">
+      </div>
+
+      <div class="speed-buttons">
+        <img src="img/speed1.png" class="speed-btn" data-speed="1">
+        <img src="img/speed2.png" class="speed-btn" data-speed="2">
+        <img src="img/speed5.png" class="speed-btn" data-speed="5">
+        <img src="img/speed10.png" class="speed-btn" data-speed="10">
+      </div>
+
+      <!-- 中奖名单 -->
+      <div class="winners-box">
+        <img src="img/winners_box.png" class="winners-bg" alt="winners">
+        <ul id="winnersList"></ul>
       </div>
     </div>
-
-    <div class="buttons">
-      <img id="startBtn" src="img/start_btn.png" alt="start" class="btn">
-      <img id="backBtn" src="img/back_btn.png" alt="back" class="btn">
-      <img id="copyBtn" src="img/copy_btn.png" alt="copy" class="btn">
-    </div>
-
-    <div class="speed-buttons">
-      <img src="img/speed1.png" class="speed-btn" data-speed="1">
-      <img src="img/speed2.png" class="speed-btn" data-speed="2">
-      <img src="img/speed5.png" class="speed-btn" data-speed="5">
-      <img src="img/speed10.png" class="speed-btn" data-speed="10">
-    </div>
-
-    <div class="winners-box">
-      <img src="img/winners_box.png" class="winners-bg">
-      <ul id="winnersList"></ul>
-    </div>
   </div>
 
-  <!-- 掉落容器 -->
+  <!-- 粒子容器 -->
   <div id="fallingContainer"></div>
 
   <script src="app.js"></script>
